syntax = "proto3";

message CreateDocRequest {
    string id = 1;
    string name = 2;
    string desc = 3;
    string text = 4;
}
message DocInfo {
    string id = 1;
    string name = 2;
    string desc = 3;
    string path = 4;
}
message DocData {
    string text = 1;
}
