syntax = "proto3";

message DocError {
    ErrorCode code = 1;
    string msg = 2;
}
enum ErrorCode {
    WsConnectError = 0;
    DocNotfound = 1;
    DuplicateRevision = 2;
    UserUnauthorized = 999;
    InternalError = 1000;
}
